# bf-network

./: .gitignore  ADMIN_DASHBOARD_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DNS_HIJACK_IMPLEMENTATION.md  HP5130_WALLED_GARDEN.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  SECURITY_CHECKLIST.md  SYSTEM_OVERVIEW.md  WIFI_THREE_POOL_IMPLEMENTATION.md  configure-hp5130-acls.py  gp.sh  migrate-to-three-pool.sh  requirements-networking.txt  test-kea-reservation.sh
captive-portal/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  LOGO_SETUP.md  MICROSOFT_GRAPH_SETUP.md  QUICKSTART.md  README.md  WIFI_REGISTRATION_DESIGN.md  docker-compose.yml  populate_test_data.py  setup.sh
captive-portal/app/: Dockerfile  app.py  email_service.py  kea_integration.py  models.py  radius_coa.py  requirements.txt
dnsmasq/: docker-compose.yml
dnsmasq/conf/: blac-onboarding.conf  hijack.conf
docs/archived/: KEA_CLIENT_CLASSES_GUIDE.md  KEA_THREE_POOL_GUIDE.md  README.md
easy-rsa/pki/: ca.crt  index.txt  serial  serial.old
freeradius/: .env.example  COA_SETUP.md  README_ENV.md  docker-compose.yml  entrypoint.sh
freeradius/raddb/: clients.conf.example  clients.conf.template  proxy.conf
kea/: Dockerfile  docker-compose.yml  kea-dhcp4.conf  kea-hosts-schema.sql
kea-hooks/dynamic_subnet/: CMakeLists.txt  Dockerfile  dns_hijack_hook.cc  dns_hijack_hook_final.cc  dns_hijack_hook_minimal.cc  dns_hijack_hook_test.cc  dns_hijack_hook_v2.cc  dns_hijack_hook_v3.cc  dns_hijack_hook_v4.cc  dns_hijack_hook_working.cc  dynamic_subnet.cc
npm/: docker-compose.yml
pki/pki/: ca.crt  (+1 more)
scripts/: dns-hijack.sh  setup-ip-alias.sh
tftp-inbox/: 5130-startup-2025-11-05.cfg  5130-startup.cfg
(+31 files in other folders)
